[tool.poetry]
name = "cyclopy"
version = "1.0"
description = "A tool for calculating the cyclomatic complexity of projects written in python"
authors = ["Sergey Popov <sergei.popov174@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Split174/cyclopy"
homepage = "https://github.com/Split174/cyclopy"

[tool.poetry.scripts]
cyclopy = 'cyclopy:main'

[tool.poetry.dependencies]
python = "^3.5"
GitPython = "^3.1.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
